# compintel-scout

./: .env.example  .gitignore  AGENTS.md  README.md  index.md  log.md  pyproject.toml
demo/: dashboard.html  index.html
raw/: README.md
schema/: __init__.py  competitor.schema.json  entity.schema.json  lead.json  role.json  signal.schema.json  validate.py  validators.py
src/compintel_scout/: __init__.py  config.py  pipeline.py
src/compintel_scout/agents/: __init__.py  enrich.py  outreach.py  qualify.py
src/compintel_scout/ingest/: __init__.py  brightdata_serp.py  brightdata_web.py  pipeline.py
src/compintel_scout/providers/: __init__.py  base.py  factory.py  placeholder.py
src/compintel_scout/synthesize/: __init__.py  index_updater.py  llm_router.py  wiki_writer.py
src/compintel_scout/utils/: __init__.py  config.py  logger.py
tests/: __init__.py  test_brightdata_ingest.py  test_config.py  test_imports.py  test_llm_router.py  test_logger.py  test_pipeline_flow.py  test_schema.py
wiki/: README.md
wiki/leads/_template/: contacts.md  outreach_draft.md  profile.md
wiki/roles/: _template.md  cmo.md  head_of_growth.md  rev_ops.md  vp_marketing.md
